<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".CatScreen">

    <TextView
        android:id="@+id/easy_catetext"
        style="@style/TEXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="2dp"
        android:layout_y="63dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/cate_greeting"
        android:textAlignment="center"
        android:textSize="45sp"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="30dp" />

    <Button
        android:id="@+id/easy_addbtn"
        style="@style/BUTTON"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_x="34dp"
        android:layout_y="280dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/add_button"
        android:textAlignment="center"
        android:textSize="11sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/easy_subbtn"
        style="@style/BUTTON"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_x="220dp"
        android:layout_y="280dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sub_button"
        android:textAlignment="center"
        android:textSize="11sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/easy_multibtn"
        style="@style/BUTTON"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_x="34dp"
        android:layout_y="400dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/multi_button"
        android:textAlignment="center"
        android:textSize="11sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/easy_divbtn"
        style="@style/BUTTON"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_x="220dp"
        android:layout_y="401dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/div_button"
        android:textAlignment="center"
        android:textSize="11sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/easy_allinbtn"
        style="@style/BUTTON"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_x="100dp"
        android:layout_y="520dp"
        android:text="@string/allin_button"
        android:textAlignment="center"
        android:textSize="11sp"
        android:fontFamily="@font/poppins_bold"
        android:visibility="visible" />

</AbsoluteLayout>