<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Levelscreen">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_light"
        android:textAlignment="textEnd"
        android:fontFamily="@font/poppins_bold"
        android:textSize="12sp"
        android:scaleX="1"
        android:scaleY="1" />

    <TextView
        android:id="@+id/textlevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/level_greeting"
        android:textAlignment="center"
        style="@style/TEXT"
        android:textSize="45sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="30dp" />


    <Button
        android:id="@+id/easy"
        android:layout_width="196dp"
        android:layout_height="61dp"
        android:layout_marginTop="30dp"
        style="@style/BUTTON"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal"
        android:text="@string/level_easy"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <Button
        android:id="@+id/med"
        android:layout_width="196dp"
        android:layout_height="61dp"
        android:layout_marginTop="30dp"
        style="@style/BUTTON"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal"
        android:text="@string/level_med"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible" />


    <Button
        android:id="@+id/hard"
        android:layout_width="196dp"
        android:layout_height="61dp"
        android:layout_marginTop="30dp"

        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal"
        android:text="@string/level_hard"
        android:textAlignment="center"
        style="@style/BUTTON"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible" />

</LinearLayout>